@@ -1,3 +1,4 @@
+- STARKA-143 Improve runtime for high-depth centromere regions, especially for strelka
 - Add starling option to always genotype indels provided in vcf
 - STARKA-135 add strand bias feature
 - STARKA-138 add read position features to strelka SNV output
